fix elements overlapping [#126393767]

--- a/app/styles/modules/_auth.scss
+++ b/app/styles/modules/_auth.scss
@@ -7,7 +7,7 @@
     margin: 40px 0 0 auto;
     width: 100%;
 
-    @media #{$md-up} {
+    @media #{$lg-up} {
       width: 579px;
     }
 
